super duper rework of the readme